# surrealdb-issue-2750-memory-leak-reproduction

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  results.txt
src/: main.rs
